# Qingluan

./: .gitignore  README.md
Doc/: PortDefine.md
Hardware/: BOM_PCB_STM32F401RET6-MINI_2_2022-10-27.csv
Hardware/一体板方案V5.0/: PCB_PCB_STM32F401RET6-MINI_2_2022-10-27.json  PCB_STM32F401RET6-MINI_2_2022-10-27.pcbdoc
Hardware/转接板方案V1.0/: BOM_PCB_转接板方案_2023-02-11.csv  PCB_PCB_转接板方案_2023-02-11.json  PCB_转接板方案_2023-02-11.pcbdoc  SCH_转接板方案_2023-02-11.json  Sheet_1_2023-02-11.schdoc
Software/Lib_version/Code/: LED.c
Software/Lib_version/SYSTEM/: delay.c  led.h  myusart.h
Software/Lib_version/USER/: Project.uvguix.LENOVO  Project.uvoptx  Project.uvprojx  stm32f4xx.h  system_stm32f4xx.c
Software/QingFly/: CMakeLists.txt
Software/QingFly/Inc/: delay.h  led.h  motor.h  mpu6050.h
Software/QingFly/Script/: STM32F401RETx_FLASH.ld
Software/QingFly/Src/: delay.c  led.c  main.c  motor.c  myusart.c  (+1 more)
Software/QingOS/: .clangd  .clangd.bak  CMakeLists.txt
Software/Reg_linuxCompile_version/: CMakeLists.txt  startup_stm32f401xe.s
Software/Reg_linuxCompile_version/Inc/: iic.h  mpu6050.h  pwm.h  stm32f401ret6.h  uart.h
Software/Reg_linuxCompile_version/Src/: clock_config.c  gpio.c  iic.c  main.c  mpu6050.c  pwm.c  rev.c  uart.c
Software/Reg_version/: clock_config.uvguix.27900
Software/X_Fly_GroupOne/: clock_config.uvguix.27900  clock_config.uvoptx  clock_config.uvprojx
Software/uCOS-II_Stdlib_linuxCompile_version/: CMakeLists.txt
software/Bluetooth/: README.md
software/register_not_all/: clock_config.uvguix.27900  clock_config.uvoptx  clock_config.uvprojx
(+218 files in other folders)
